# zeroclaw

./: Cargo.toml  req.md
.githooks/: commit-msg
.github/workflows/: release-xydt-manual.yml
api/search.index/: 00046e009e.js  003b7b2161.js  005ffa82d5.js  008fd91916.js  009a8006de.js  00aec07202.js  00c4edd96e.js  00d03e7f5b.js  00ef14dffa.js  0118659701.js  01626db7a0.js  017986afb8.js  01c895bb71.js  01d3407ede.js  01d4b6e385.js  021153186f.js  022a9e446c.js  022b62b27e.js  023ff31967.js  0267b0572b.js  026ce23a12.js  02ce17c952.js  02f3077a8f.js  0310ed0f19.js  036c793cba.js  0394b3d18d.js  039c339a1e.js  03dba00cc0.js  03dc982f69.js  03fdb323e8.js  040a91f407.js  04128ccc36.js  0424050c83.js  042b1999c2.js  0433dfdb30.js  043d1c0478.js  0446c89a51.js  0467de98ce.js  046d321a88.js  0495ab1f5d.js  (+1038 more)
api/zeroclaw/: struct.Config.html
api/zeroclaw_eval/: index.html
api/zeroclaw_hardware/: enum.HardwareTransport.html  fn.boot.html  fn.merge_hardware_tools.html  index.html  struct.HardwareBootResult.html  struct.HardwareConfig.html
api/zeroclaw_memory/: enum.MemoryCategory.html  fn.create_memory.html  fn.create_memory_for_agent.html  fn.create_memory_with_storage_and_routes.html  fn.create_response_cache.html  fn.is_recent_recall_query.html  fn.normalize_recent_recall_query.html  struct.ExportFilter.html  struct.MemoryEntry.html  struct.ProceduralMessage.html  trait.Memory.html
api/zeroclaw_tools/: index.html
crates/zeroclaw-channels/: Cargo.toml
crates/zeroclaw-dt-nodes/: Cargo.toml
crates/zeroclaw-dt-nodes/src/: lib.rs
crates/zeroclaw-dt-nodes/src/dt_nodes/: executor.rs  mod.rs  node_runtime_trace.rs  ws_client.rs
crates/zeroclaw-dt-nodes/src/dt_nodes/handlers/: camera_snap.rs  file_save.rs  mod.rs  system_run.rs
crates/zeroclaw-gateway/: Cargo.toml
crates/zeroclaw-runtime/: Cargo.toml
crates/zeroclaw-skill-security/: Cargo.toml
crates/zeroclaw-skill-security/src/: archive.rs  client.rs  lib.rs  policy.rs  service.rs  store.rs  types.rs  worker.rs
docs/: SUMMARY.md
master/en/: 404.html  api.html  index.html  searcher-c2a407aa.js
src/: lib.rs  main.rs
(+929 files in other folders)
