[package]
name = "zeroclaw-skill-security"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Security scanning module for skill archives."
publish = false

[dependencies]
zeroclaw-config.workspace = true
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }
hex = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json" ,"rustls-tls", "trust-dns", "blocking", "multipart"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
sha2 = "0.10"
tokio = { version = "1.50", default-features = false, features = ["rt-multi-thread", "time"] }
tracing = { version = "0.1", default-features = false }
zip = { version = "8.1", default-features = false, features = ["deflate-flate2"] }
